using System;
using System.Collections.Generic;

namespace Intex2026API.Models;

public partial class Partner
{
    public string? PartnerId { get; set; }

    public string? PartnerName { get; set; }

    public string? PartnerType { get; set; }

    public string? RoleType { get; set; }

    public string? ContactName { get; set; }

    public string? Email { get; set; }

    public string? Phone { get; set; }

    public string? Region { get; set; }

    public string? Status { get; set; }

    public DateOnly? StartDate { get; set; }

    public DateOnly? EndDate { get; set; }

    public string? Notes { get; set; }
}
