%% intex2026DB — Azure SQL (Lighthouse)
%% Regenerate: python docs/erd/generate_azure_sqlserver_erd.py
erDiagram
  %% Azure SQL database: intex2026DB (Lighthouse)
  %% FKs from lighthouse.sqlserver.foreignkeys.sql
  %% partner_assignments.safehouse_id is decimal(18,6); no FK to safehouses (type mismatch in seed).
  supporters ||--o{ donations : "supporter_id"
  social_media_posts ||--o{ donations : "referral_post_id"
  donations ||--o{ donation_allocations : "donation_id"
  safehouses ||--o{ donation_allocations : "safehouse_id"
  donations ||--o{ in_kind_donation_items : "donation_id"
  safehouses ||--o{ residents : "safehouse_id"
  residents ||--o{ education_records : "resident_id"
  residents ||--o{ health_wellbeing_records : "resident_id"
  residents ||--o{ home_visitations : "resident_id"
  residents ||--o{ incident_reports : "resident_id"
  safehouses ||--o{ incident_reports : "safehouse_id"
  residents ||--o{ intervention_plans : "resident_id"
  residents ||--o{ process_recordings : "resident_id"
  partners ||--o{ partner_assignments : "partner_id"
  safehouses ||--o{ safehouse_monthly_metrics : "safehouse_id"
  donation_allocations {
    string allocation_id PK
    string donation_id FK
    string safehouse_id FK
    string program_area
    decimal amount_allocated
    date allocation_date
    string allocation_notes
  }

  donations {
    string donation_id PK
    string supporter_id FK
    string donation_type
    date donation_date
    string is_recurring
    string campaign_name
    string channel_source
    string currency_code
    decimal amount
    decimal estimated_value
    string impact_unit
    string notes
    string referral_post_id FK
  }

  education_records {
    string education_record_id PK
    string resident_id FK
    date record_date
    string education_level
    string school_name
    string enrollment_status
    decimal attendance_rate
    decimal progress_percent
    string completion_status
    string notes
  }

  health_wellbeing_records {
    string health_record_id PK
    string resident_id FK
    date record_date
    decimal general_health_score
    decimal nutrition_score
    decimal sleep_quality_score
    decimal energy_level_score
    decimal height_cm
    decimal weight_kg
    decimal bmi
    string medical_checkup_done
    string dental_checkup_done
    string psychological_checkup_done
    string notes
  }

  home_visitations {
    string visitation_id PK
    string resident_id FK
    date visit_date
    string social_worker
    string visit_type
    string location_visited
    string family_members_present
    string purpose
    string observations
    string family_cooperation_level
    string safety_concerns_noted
    string follow_up_needed
    string follow_up_notes
    string visit_outcome
  }

  in_kind_donation_items {
    string item_id PK
    string donation_id FK
    string item_name
    string item_category
    string quantity
    string unit_of_measure
    decimal estimated_unit_value
    string intended_use
    string received_condition
  }

  incident_reports {
    string incident_id PK
    string resident_id FK
    string safehouse_id FK
    date incident_date
    string incident_type
    string severity
    string description
    string response_taken
    string resolved
    date resolution_date
    string reported_by
    string follow_up_required
  }

  intervention_plans {
    string plan_id PK
    string resident_id FK
    string plan_category
    string plan_description
    string services_provided
    decimal target_value
    date target_date
    string status
    date case_conference_date
    datetime created_at
    datetime updated_at
  }

  partner_assignments {
    string assignment_id PK
    string partner_id FK
    decimal safehouse_id
    string program_area
    date assignment_start
    date assignment_end
    string responsibility_notes
    string is_primary
    string status
  }

  partners {
    string partner_id PK
    string partner_name
    string partner_type
    string role_type
    string contact_name
    string email
    string phone
    string region
    string status
    date start_date
    date end_date
    string notes
  }

  process_recordings {
    string recording_id PK
    string resident_id FK
    date session_date
    string social_worker
    string session_type
    string session_duration_minutes
    string emotional_state_observed
    string emotional_state_end
    string session_narrative
    string interventions_applied
    string follow_up_actions
    string progress_noted
    string concerns_flagged
    string referral_made
    string notes_restricted
  }

  public_impact_snapshots {
    string snapshot_id PK
    date snapshot_date
    string headline
    string summary_text
    string metric_payload_json
    string is_published
    date published_at
  }

  residents {
    string resident_id PK
    string case_control_no
    string internal_code
    string safehouse_id FK
    string case_status
    string sex
    date date_of_birth
    string birth_status
    string place_of_birth
    string religion
    string case_category
    string sub_cat_orphaned
    string sub_cat_trafficked
    string sub_cat_child_labor
    string sub_cat_physical_abuse
    string sub_cat_sexual_abuse
    string sub_cat_osaec
    string sub_cat_cicl
    string sub_cat_at_risk
    string sub_cat_street_child
    string sub_cat_child_with_hiv
    string is_pwd
    string pwd_type
    string has_special_needs
    string special_needs_diagnosis
    string family_is_4ps
    string family_solo_parent
    string family_indigenous
    string family_parent_pwd
    string family_informal_settler
    date date_of_admission
    string age_upon_admission
    string present_age
    string length_of_stay
    string referral_source
    string referring_agency_person
    date date_colb_registered
    date date_colb_obtained
    string assigned_social_worker
    string initial_case_assessment
    date date_case_study_prepared
    string reintegration_type
    string reintegration_status
    string initial_risk_level
    string current_risk_level
    date date_enrolled
    date date_closed
    datetime created_at
    string notes_restricted
  }

  safehouse_monthly_metrics {
    string metric_id PK
    string safehouse_id FK
    date month_start
    date month_end
    string active_residents
    decimal avg_education_progress
    decimal avg_health_score
    string process_recording_count
    string home_visitation_count
    string incident_count
    string notes
  }

  safehouses {
    string safehouse_id PK
    string safehouse_code
    string name_col
    string region
    string city
    string province
    string country
    date open_date
    string status
    string capacity_girls
    string capacity_staff
    string current_occupancy
    string notes
  }

  social_media_posts {
    string post_id PK
    string platform
    string platform_post_id
    string post_url
    datetime created_at
    string day_of_week
    string post_hour
    string post_type
    string media_type
    string caption
    string hashtags
    string num_hashtags
    string mentions_count
    string has_call_to_action
    string call_to_action_type
    string content_topic
    string sentiment_tone
    string caption_length
    string features_resident_story
    string campaign_name
    string is_boosted
    decimal boost_budget_php
    string impressions
    string reach
    string likes
    string comments
    string shares
    string saves
    string click_throughs
    decimal video_views
    decimal engagement_rate
    string profile_visits
    string donation_referrals
    decimal estimated_donation_value_php
    string follower_count_at_post
    decimal watch_time_seconds
    decimal avg_view_duration_seconds
    decimal subscriber_count_at_post
    decimal forwards
  }

  supporters {
    string supporter_id PK
    string supporter_type
    string display_name
    string organization_name
    string first_name
    string last_name
    string relationship_type
    string region
    string country
    string email
    string phone
    string status
    datetime created_at
    date first_donation_date
    string acquisition_channel
  }
